# hayabusa-evtx

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
samples/: kernel_processor_power_complexdata.evtx
src/: err.rs  evtx_chunk.rs  evtx_parser.rs  evtx_record.rs  evtx_structure.rs  json_output.rs  lib.rs  macros.rs  string_cache.rs  template_cache.rs  xml_output.rs
src/benches/: benchmark.rs
src/binxml/: assemble.rs  deserializer.rs  name.rs  tokens.rs  value_variant.rs
src/model/: deserialized.rs  xml.rs
src/utils/: binxml_utils.rs  hexdump.rs  mod.rs  time.rs
tests/: test_cli.rs  test_cli_interactive.rs  test_complexdata_field.rs  test_empty_data_field.rs  test_full_samples.rs  test_record_samples.rs  test_recovered_events.rs
tests/snapshots/: test_record_samples__event_json_missing_string_cache_entry.snap  test_record_samples__event_json_with_multiple_nodes_same_name.snap  test_record_samples__event_json_with_size_t.snap
